<resources>
    <string name="app_name">BeNotified!</string>
    <string name="action_signout">Sign Out</string>
    <string name="action_delete">Delete</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="reset_password">Reset Password</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

    <string name="emailpassword_status_fmt">Email User: %s</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="notification_list_title">Messages</string>
    <string name="received_notifications_title">Received Messages</string>
    <string name="beacons_title">Beacons</string>
    <string name="title_activity_tab">BeNotified</string>
    <string name="title_activity_new_message">New Message</string>
    <string name="title_activity_new_beacon">New Beacon</string>
    <string name="title_activity_message_details">Message Details</string>

    <string name="beacon">Beacon</string>

    <string name="title_request_location_access">This app needs location access</string>
    <string name="description_request_location_access">Please grant location access so this app can detect beacons.</string>
    <string name="grant_access">Grant access</string>
    <string name="title_location_access_denied">Functionality limited</string>
    <string name="description_location_access_denied">Since location access has not been granted, this app will not be able to discover beacons when in the background.</string>
    <string name="close_app">Close App</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>
</resources>
